Mac: Update permission bubble anchor while tab dragging.

When dragging tabs, the window is repositioned with direct setFrame: calls
which don't automatically reposition child windows. Most dialogs block tab
dragging or dismiss on focus loss. Permission bubbles do not, so ensure
they are anchored correctly during tab drag.

TEST=Have two tabs, navigate to https://permission.site/,
     Padlock: Ensure everything is set to "Ask",
     Click, e.g., Notifications to get a prompt,
     Drag the tab off the browser window.
     Prompt should reappear with a correct position.

Bug: 628702
Change-Id: I5a0f9fd6b194437f9aec258077a0e16ba6a832e5
Reviewed-on: https://chromium-review.googlesource.com/631079
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496950}
Former-commit-id: 2090e0df2feba38f8e72f549dba44104c400af2f